--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,9 @@
 /**app.wxss**/
+
+page {
+  width: 100%;
+  height: 100%;
+}
 .container {
   height: 100%;
   display: flex;
@@ -8,6 +13,7 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
 
 .u-f20 {font-size: 20rpx;}
 .u-f22 {font-size: 22rpx;}
