[feature-exam] lyhsjy 认知检测的页面及逻辑

--- a/app.wxss
+++ b/app.wxss
@@ -41,3 +41,10 @@ page {
   background-color: rgb(19, 109, 184);
   color: #ffffff;
 }
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
