--- a/components/grcourse/index.wxss
+++ b/components/grcourse/index.wxss
@@ -18,12 +18,13 @@
   width: 79rpx;
   height: 32rpx;
   text-align: center;
-  background-color: #A4D3EE;
+  background-color: #78b5cf;
 }
 .title {
   width: 664rpx;
   margin: 40rpx auto;
   font-size: 36rpx;
+  height: 90rpx;
 }
 .desc {
   display: flex;
@@ -51,7 +52,7 @@
   font-size: 24rpx;
 }
 .study text:last-child {
-  background-color:  #A4D3EE;
+  background-color:  #78b5cf;
   width: 166rpx;
   height: 62rpx;
   line-height: 62rpx;
@@ -64,6 +65,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.time-hidden {
+  display: none;
 }
 .time text {
   font-size: 24rpx;
