--- a/components/mylesson/index.wxml
+++ b/components/mylesson/index.wxml
@@ -1,15 +1,15 @@
 <!--components/mylesson/index.wxml-->
 <view class='lesson' bindtap='toclass'>
   <view class='edi'>
-    <text>必修一</text>
+    <text>{{edi}}</text>
   </view>
-  <view class='title'>一元一次方程解法与一元二次方程解法的比较分析</view>
+  <view class='title'>{{title}}</view>
   <view class='desc'>
-  <image src='{{pic}}'></image>{{name}}
+  <image src='{{tx}}'></image>{{name}}
     <text>{{num}} 课时</text>
   </view>
   <view class='study'>
-  <text>2.1指数函数</text>
+  <text>{{point}}</text>
   <text>进入学习</text>
   </view>
 </view>
