--- a/pages/customize/index.wxml
+++ b/pages/customize/index.wxml
@@ -1,7 +1,7 @@
 <!--pages/customize/index.wxml-->
 <swiper indicator-dots="{{indicatorDots}}"
   autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-  <block wx:for="{{imgUrls}}" wx:key="index.id">
+  <block wx:for="{{imgUrls}}" wx:key="{{index}}">
     <swiper-item>
       <image src="{{item}}" class="slide-image" />
     </swiper-item>
