--- a/pages/gotoclass/index.wxml
+++ b/pages/gotoclass/index.wxml
@@ -2,3 +2,9 @@
 <view class="section tc">
   <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"   controls ></video>
 </view>
+<view class="classnum">
+<text>01</text>
+<text>02</text>
+<text>03</text>
+<text>04</text>
+</view>
