--- a/pages/detect/index.wxml
+++ b/pages/detect/index.wxml
@@ -1,2 +1,5 @@
 <!--pages/detect/index.wxml-->
-<text>pages/detect/index.wxml</text>
+
+<view class="detect">
+    <view class="chapter">第一章</view>
+</view>
