--- a/components/button/index.wxss
+++ b/components/button/index.wxss
@@ -15,6 +15,7 @@
   border-radius: 4px;
   line-height: 96rpx;
   outline: none;
+  font-size: 30rpx;
 }
 .btn-wrapper .btn::after{
   border: 1rpx solid #434343;
