--- a/pages/detect/index.wxss
+++ b/pages/detect/index.wxss
@@ -1,1 +1,15 @@
 /* pages/detect/index.wxss */
+
+.detect{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+
+
+.detect .chapter{
+    position: absolute;
+    width: 200rpx;
+    height: 200rpx;
+}
