--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,56 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* pages/cgrade/index.wxss */
+.cg-wrap {
+  width: 645rpx;
+  min-height: 100rpx; 
+  margin: 0 auto;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.tag-grade {
+  width: 100%;
+  min-height: 250rpx;
+  margin-top: 85rpx;
+  position: relative;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.ctext {
+  position: absolute;
+  width: 196rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  text-align: center;
+  color: #fff;
+  background-position: right top;
+  top: -30rpx;
+  left: 150rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.ctext image {
+  width: 196rpx;
+  height: 60rpx; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.allgrades {
+  width: 100%;
+  margin: 60rpx  0 auto;
+}
+.tag-subject {
+  margin-top: 58rpx;
+  min-height: 170rpx;
+}
+.tag-book {
+  min-height: 210rpx;
+  margin-top: 60rpx;
+}
+.start-study {
+  width: 645rpx;
+  line-height: 94rpx;
+  text-align: center;
+  color: #353535;
+  font-size: 33rpx;
+  position: fixed;
+  bottom: 65rpx;
+  border: 1px dashed #ccc;
+}
+.hide {
+  display: none;
 }
