--- a/pages/exam/index.wxml
+++ b/pages/exam/index.wxml
@@ -33,7 +33,7 @@
 				<swiper-item>
 					<view>
 						<view class="topic-img">
-							<image mode="widthFix" src="{{ item.path }}" />
+							<image mode="widthFix" src="{{ item.url }}"/>
 						</view>
 						<view class="btn-wrap">
 							<block wx:for="{{ answerLists }}" wx:key="{{ index }}">
