update grade and subject

--- a/components/allgrades/index.wxml
+++ b/components/allgrades/index.wxml
@@ -1,8 +1,8 @@
 <!--components/allgrades/index.wxml-->
 <view class="all-wrap">
 	<block wx:for="{{ allGrades }}" wx:key="index">
-		<view bindtap="chooseGrade" data-index="{{ index }}" class="all-item {{ choosed === index ? 'active' : '' }}">
-			{{ item }}
+		<view bindtap="chooseGrade" data-idx="{{ item.id }}" data-index="{{ index }}" class="all-item {{ choosed === index ? 'active' : '' }}">
+			{{ item.grade }}
 		</view>
 	</block>
 </view>
