--- a/components/allsubjects/index.wxml
+++ b/components/allsubjects/index.wxml
@@ -1,8 +1,8 @@
 <!--components/allsubjects/index.wxml-->
 <view class="all-wrap">
   <block wx:for="{{ currentSubjects }}"  wx:key="index">
-    <view class="all-item {{ choosed === index ? 'active' : '' }}" bindtap="chooseSubject" data-index="{{ index }}">
-      {{ item }}
+    <view class="all-item {{ choosed === index ? 'active' : '' }}" bindtap="choosedSubject" data-idx="{{ item.id }}" data-index="{{ index }}">
+      {{ item.subject }}
     </view>
   </block>
 </view>
