--- a/components/allversion/index.wxml
+++ b/components/allversion/index.wxml
@@ -2,13 +2,13 @@
 <view class="all-wrap">
 	<block wx:for="{{ allVersion }}" wx:key="index">
 		<block wx:if="{{ index%2 === 0}}">
-			<view class="all-item all-item-left {{ choosed === index ? 'active' : '' }}" bindtap="chooseVersion" data-index="{{ index }}">
-				{{ item }}
+			<view class="all-item all-item-left {{ choosed === index ? 'active' : '' }}" bindtap="chooseVersion" data-idx="{{item.id}}" data-index="{{ index }}">
+				{{ item.textbook }}
 			</view>
 		</block>
 		<block wx:else="{{ index%2 === 1}}">
-			<view class="all-item all-item-right {{ choosed === index ? 'active' : '' }}" bindtap="chooseVersion" data-index="{{ index }}">
-				{{ item }}
+			<view class="all-item all-item-right {{ choosed === index ? 'active' : '' }}" bindtap="chooseVersion" data-idx="{{item.id}}" data-index="{{ index }}">
+				{{ item.textbook }}
 			</view>
 		</block>
 	</block>
