--- a/pages/buycourse/index.wxml
+++ b/pages/buycourse/index.wxml
@@ -5,25 +5,25 @@
 </view>
 <view class="introduce" wx:for="{{list}}" wx:key="{{index}}">
   <view class="title">
-    <text>{{item.title}}</text>
+    <text>课程介绍</text>
   </view>
-  <text>{{item.desc}}</text>
+  <text>{{item.courseIntro}}</text>
 </view>
-<view class="price" wx:for="{{list}}" wx:key="{{index}}">
+<view class="price" wx:for="{{list}}" wx:key="{{item.courseId}}">
  <view class="individual">
- 单独购买 <text class="black">{{item.indivi}}</text>元
+ 单独购买 <text class="black">{{item.courseGroupPrice}}</text>元
  </view>
  <view class="group">
  <view class="pinke">
-  拼课 <text class="black">{{item.group}}</text>元
+  拼课 <text class="black">{{item.courseGroupPrice}}</text>元
  </view>
 
 <view class="remain">
- 还差<text class="black">{{item.groupneed}}</text>人
+ 还差<text class="black">{{item.groupNeedNum}}</text>人
 </view>
 <view class="time">
-倒计时<text class="black">{{item.time}}</text>
+<!-- 倒计时<text class="black">{{item.time}}</text> -->
+倒计时<text class="black">24:00:00</text>
 </view>
- 
  </view>
 </view>
