--- a/pages/customize/index.wxss
+++ b/pages/customize/index.wxss
@@ -8,7 +8,21 @@
   width:100%;
   display: block;
 }
-swiper image {
+ .customize swiper image {
   width: 100%;
   height: 392rpx;
 }
+
+.customize swiper {
+    width: 100%;
+    height: 400rpx;
+  }
+ .customized swiper image{
+    width: 100%;
+    height: 100%;
+  }
+  
+ .customized video {
+    width: 100%;
+    height: 400rpx;
+  }
