--- a/pages/mycourse/index.wxml
+++ b/pages/mycourse/index.wxml
@@ -4,7 +4,7 @@
 </block>
 
 <block wx:for="{{groupList}}" wx:key="{{item.courseId}}">
-  <s-grcourse name="{{item.name}}" num="{{item.num}}" tx="{{item.tx}}" title="{{item.title}}" point="{{item.point}}" edi="{{item.edi}}" groupneed="{{item.groupneed}}" courseId="{{item.courseId}}" retime="{{item.retime}}" />
+  <s-grcourse name="{{item.name}}" num="{{item.num}}" tx="{{item.tx}}" title="{{item.title}}" point="{{item.point}}" edi="{{item.edi}}" groupneed="{{item.groupneed}}" courseId="{{item.courseId}}" retime="{{clock}}" />
 </block>
 
 
