--- a/pages/buycourse/index.wxml
+++ b/pages/buycourse/index.wxml
@@ -23,7 +23,7 @@
 </view>
 <view class="time">
 <!-- 倒计时<text class="black">{{item.time}}</text> -->
-倒计时<text class="black">24:00:00</text>
+倒计时<text class="black">{{clock}}</text>
 </view>
  </view>
 </view>
