--- a/pages/customize/index.wxss
+++ b/pages/customize/index.wxss
@@ -17,9 +17,13 @@
     width: 100%;
     height: 400rpx;
   }
+  .customized swiper {
+    width: 100%;
+    height: 400rpx;
+  }
  .customized swiper image{
     width: 100%;
-    height: 100%;
+    height:392rpx;
   }
   
  .customized video {
