--- a/pages/detect/index.wxml
+++ b/pages/detect/index.wxml
@@ -6,7 +6,7 @@
         <view class="point u-f20" wx:for="{{list}}" wx:key="index" catchtap="toDetect" data-type="{{item}}"
             style="left: {{pos[index].x}}rpx; top: {{pos[index].y}}rpx">
             <text class="text">{{item.section}}</text>
-            <view class="wrapper" style="top: {{index * 20}}rpx">
+            <view class="wrapper" wx:if="{{flag}}" style="top: {{index * 20}}rpx">
                 <view class="water w1"></view>
                 <view class="water w2"></view>
                 <view class="water w3"></view>
