--- a/components/topicsbtn/index.wxss
+++ b/components/topicsbtn/index.wxss
@@ -3,6 +3,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0 50rpx;
+  overflow: scroll;
 }
 .container .default {
   display: inline-block;
@@ -11,7 +12,7 @@
   border-radius: 50%;
   font-size: 36rpx;
   line-height: 100rpx;
-  margin: 0 15rpx;
+  margin: 0 12rpx;
   margin-bottom: 20rpx;
   font-family: 'Adobe Heiti Std R';
   border: 1px solid rgba(230,230,230,1);
