--- a/components/topicsbtn/index.wxml
+++ b/components/topicsbtn/index.wxml
@@ -3,5 +3,6 @@
 	<block wx:for="{{ scantronList }}" wx:key="index">
 		<view bindtap="rediretTopic" data-index="{{index}}" class="default {{ isFinshed[index] > -1 ? 'active' : 'init' }}">{{ index + 1 }}</view>
 	</block>
+	<view class="tip" bindtap="watchResult">交卷并查看结果</view>
 </view>
 
