--- a/components/topicsbtn/index.wxss
+++ b/components/topicsbtn/index.wxss
@@ -1,6 +1,7 @@
 /* components/topicsbtn/index.wxss */
 .container{
   width: 100%;
+  height: 400rpx;
   box-sizing: border-box;
   padding: 0 50rpx;
   overflow: scroll;
