--- a/pages/exam/index.wxss
+++ b/pages/exam/index.wxss
@@ -84,3 +84,20 @@
 	font-size: 34rpx;
 	font-family: "Adobe Heiti Std R";
 }
+
+
+.img{
+	width: 34rpx;
+}
+.item-one{
+	width: 120rpx;
+	line-height: 34rpx;
+	display:flex;
+	justify-content: flex-start;
+}
+.item-text{
+	width: 57rpx;
+	line-height: 34rpx;
+	color:#626262;
+	margin-left: 8rpx;
+}
