--- a/pages/detect/index.wxml
+++ b/pages/detect/index.wxml
@@ -3,15 +3,15 @@
     <view class="chapter" catchtap="changeChapter">
         <text catchtap="openToast" class="u-f30">{{activeChapter}}</text>
         <block wx:for="{{list}}">
-            <view class="point u-f20" wx:if="{{item['submitStatus'] === 0}}" wx:key="index" catchtap="toDetect" data-type="{{item}}" style="left: {{pos[index].x}}rpx; top: {{pos[index].y}}rpx">
+            <view class="point u-f20"  wx:if="{{item['submitStatus'] === 0}}" wx:key="index" catchtap="toDetect" data-type="{{item}}" style="left: {{pos[index].x}}rpx; top: {{pos[index].y}}rpx">
                 <text class="text">{{item.section}}</text>
-                <view class="wrapper" wx:if="{{flag}}" style="top: {{index * 20}}rpx">
+                <view class="wrapper" wx:if="{{flag}}">
                     <view class="water w1"></view>
                     <view class="water w2"></view>
                     <view class="water w3"></view>
                 </view>
             </view>
-            <view class="point u-f20" wx:if="{{item['submitStatus'] === 1}}" wx:key="index" catchtap="toPoints" data-type="{{item}}" style="left: {{pos[index].x}}rpx; top: {{pos[index].y}}rpx">
+            <view class="point u-f20" wx:if="{{item['submitStatus'] === 2}}" wx:key="index" catchtap="toPoints" data-type="{{item}}" style="left: {{pos[index].x}}rpx; top: {{pos[index].y}}rpx">
                 <text class="text">{{item.section}}</text>
                 <view class="wrapper" style="top: {{(1 - item.ratio) * 160}}rpx">
                     <view class="water w1"></view>
