--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -1,21 +1,45 @@
+.p-container {
+  width: 100%;
+  height: 100%;
+}
 
-.userinfo {
+.p-container .logo {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 280rpx;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.p-container .logo .pic {
+  width: 322rpx;
+  height: 150rpx;
+  background: #ccc;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+
+.p-container .logo .title {
+  font-size: 30rpx;
+  padding: 20rpx;
+  color:rgba(181,181,181,1);
 }
 
-.usermotto {
-  margin-top: 200px;
+
+.btn {
+  margin-top: 100rpx;
+  height: 100rpx;
+  width: 394rpx;
+  border-radius: 50rpx;
+  background: #15DA7F;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn .login-text {
+  color: #fff;
+  font-size: 48rpx;
+}
+.btn::after{
+  border: 0;
 }
