--- a/pages/detect/index.wxss
+++ b/pages/detect/index.wxss
@@ -1,157 +1,69 @@
-/* pages/detect/index.wxss */
-
-.detect{
+.p-container {
     width: 100%;
     height: 100%;
-    position: relative;
+    background: rgb(240, 242, 245);
 }
 
-.detect .chapter{
-    position: absolute;
-    width: 200rpx;
-    height: 400rpx;
-    border: 2rpx solid #ccc;
-    border-left: none;
-    border-bottom-right-radius: 200rpx;
-    border-top-right-radius: 200rpx;
-    line-height: 400rpx;
-    text-align: center;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.detect .point {
-    width: 160rpx;
-    height: 160rpx;
-    border: 2rpx solid #ccc;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 160rpx;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translateY(80rpx);
-    overflow: hidden;
-    
-}
-.detect .point .text{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    /* transform: translate(0 -50%); */
-    color: #000;
-    text-align: center;
-    z-index: 1000;
-    display: inline-block;
-    text-align: center;
+.banner {
     width: 100%;
-    line-height: 1;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-.detect .point .wrapper{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-.detect .point .water {
-    position: absolute;
-    left: -20rpx;
-    top: 0;
-    border-radius: 70rpx;
-    width: 200rpx;
-    height: 200rpx;
-    background: rgba(54, 142, 224, 0.4);
-    z-index: 100;
+    height: 294rpx;
+    border: 1px solid #ccc;
 }
 
-.w1 {
-    animation: wave 10s 0s infinite;
-}
-.w2 {
-    animation: wave 10s 0.4s infinite;
-}
-.w3 {
-    animation: wave 10s 0.8s infinite;
-}
-
-@keyframes wave {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);    
-    }
-}
-
-
-
-.toast {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: rgba(0, 0, 0, .6);
-}
-
-.content {
-    width: 686rpx;
-    height: 600rpx;
+.header {
     background: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10rpx;
+}
+.header .chapter .img {
+    width: 120rpx;
+    height: 74rpx;
+    vertical-align: middle;
+}
+.header .chapter {
     box-sizing: border-box;
-    padding: 16rpx;
+    padding: 40rpx 40rpx 10rpx;
+}
+.header .chapter .txt {
+    font-weight: bold;
+    font-size: 48rpx;
+    position: relative;
+    top: 4rpx;
+    left: -60rpx;
+}
+.header .chapter .tip {
+    font-size: 24rpx;
+    color: #1C1B1B;
+    text-indent: 2.5em;
 }
 
-.content .close {
-    position: absolute;
-    top: 15rpx;
-    right: 15rpx;
-    width: 32rpx;
-    height: 32rpx;
-    padding: 10rpx;
-}
-
-.content .list {
+.scroll .scroller {
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    box-sizing: border-box;
-    padding-top: 25rpx;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
+    white-space: nowrap;
 }
 
-.content .list .list-item {
-    margin: 20rpx;
-    text-align: center;
-    width: 400rpx;
-    height: 120rpx;
-    background: #ccc;
-    line-height: 120rpx;
-    border: 1px solid #fff;
-    border-radius: 10rpx;
-}
-
-
-.btn {
-    width: 200rpx;
+.scroll .scroller .item {
+    display: inline-block;
+    width: 250rpx;
     height: 60rpx;
-    position: absolute;
-    right: 32rpx;
-    bottom: 32rpx;
-    border-radius: 8rpx;
     text-align: center;
-    line-height: 60rpx;
-    color: #fff;
+    font-size: 30rpx;
+    font-weight: bold;
 }
+
+.scroll .scroller .item._active {
+    color: #24DD88;
+}
+.scroll .scroller .item._active::after{
+    content: '';
+    display: block;
+    position: relative;
+    left: 75rpx;
+    top: 16rpx;
+    width: 100rpx;
+    height: 4rpx;
+    background: #24DD88;
+}
+
